fixed overlapping of title tracks on doodle icons

--- a/style.css
+++ b/style.css
@@ -174,6 +174,7 @@ header {
 .track-info-compact {
     flex: 1;
     min-width: 0;
+    padding-right: 40px;
 }
 
 .track-title {
@@ -714,6 +715,7 @@ header {
 .playlist-track-info {
     flex: 1;
     min-width: 0;
+    padding-right: 30px;
 }
 
 .playlist-track-title {
